RESOLVED FIXED19675
[GTK] negative text-shadows are not rendered
https://bugs.webkit.org/show_bug.cgi?id=19675
Summary [GTK] negative text-shadows are not rendered
Jonathon Jongsma (jonner)
Reported 2008-06-19 09:16:19 PDT
the Gtk port does not render negative text shadows at all.
Attachments
draw text shadows with negative offsets (1.85 KB, patch)
2008-06-19 09:28 PDT, Jonathon Jongsma (jonner)
mitz: review+
Jonathon Jongsma (jonner)
Comment 1 2008-06-19 09:28:02 PDT
Created attachment 21838 [details] draw text shadows with negative offsets
mitz
Comment 2 2008-06-19 09:29:05 PDT
Comment on attachment 21838 [details] draw text shadows with negative offsets r=me
Mark Rowe (bdash)
Comment 3 2008-06-22 17:54:55 PDT
Landed in r34731.
Note You need to log in before you can comment on or make changes to this bug.